chore: use secrets

--- a/.github/workflows/using_secrets.yml
+++ b/.github/workflows/using_secrets.yml
@@ -9,8 +9,8 @@ jobs:
     steps:
       - name: Print Secret
         run: |
-          echo "${{ secrets.TOP_SECRET }}"
-          echo "${{ secrets.NOT_THERE }}"
-          echo $ENV_SECRET
+          echo "Top secret: ${{ secrets.TOP_SECRET }}"
+          echo "Not there: ${{ secrets.NOT_THERE }}"
+          echo "From the environment: $ENV_SECRET"
         env:
           ENV_SECRET: ${{ secrets.TOP_SECRET }}
