chore: use environment and secret from it

--- a/.github/workflows/using_secrets.yml
+++ b/.github/workflows/using_secrets.yml
@@ -3,14 +3,21 @@ name: "Using Secrets"
 on:
   workflow_dispatch:
 
+
 jobs:
   print_secret:
     runs-on: ubuntu-latest
+
+    environment:
+      name: production
+      url: https://github.com
+
     steps:
       - name: Print Secret
         run: |
           echo "Top secret: ${{ secrets.TOP_SECRET }}"
           echo "Not there: ${{ secrets.NOT_THERE }}"
           echo "From the environment: $ENV_SECRET"
+          echo "PROD_ENV_SECRET from the production environment: ${{secrets.PROD_ENV_SECRET}}"
         env:
           ENV_SECRET: ${{ secrets.TOP_SECRET }}
